# aoc2024

./: Cargo.toml  next_day.sh
aoc_register/: Cargo.toml
aoc_register/src/: lib.rs
src/: aoc_core.rs  days.rs  main.rs
src/day01/: main.rs  mod.rs
src/day02/: mod.rs
src/day03/: manual.rs  mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: core.rs  mod.rs  part_a.rs  part_b.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: input.txt  mod.rs  tree.txt
src/day15/: debug.txt  mod.rs  part_b.rs
