[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"
aoc_register = { path = "./aoc_register" }
ndarray = { version = "=0.15.2", features = ["blas", "approx", "std"] }
ndarray-linalg = { version = "=0.16.0", features = ["openblas-static"] }

[workspace]
members = ["aoc_register"]
